<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/txttilie2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/AboutMe"
        android:textSize="@dimen/h1" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/my_picture"
        android:layout_height="@dimen/my_picture"
        android:layout_below="@+id/txttilie2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/my_margin"
        android:layout_marginEnd="@dimen/my_margin"
        android:layout_marginTop="@dimen/my_margin"
        app:srcCompat="@drawable/me" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="clickBack"
        android:text="Back"
        android:textSize="@dimen/h2" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageView"
        android:layout_margin="@dimen/my_margin"
        android:background="#2faa9b9b">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:textSize="@dimen/my_margin"
                tools:text="@string/name1" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClickFacebook"
                android:text="@string/face" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>